IntelliJ autofix: replace immutable lists by List.*of()