@@ -59,7 +59,6 @@ import com.suse.utils.Opt;
 import org.apache.log4j.Logger;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
@@ -73,10 +72,9 @@ import java.util.stream.Stream;
  */
 public class RegistrationUtils {
 
-    private static final List<String> BLACKLIST = Collections.unmodifiableList(
-       Arrays.asList("rhncfg", "rhncfg-actions", "rhncfg-client", "rhn-virtualization-host", "osad",
-               "mgr-cfg", "mgr-cfg-actions", "mgr-cfg-client", "mgr-virtualization-host", "mgr-osad")
-    );
+    private static final List<String> BLACKLIST = List.of("rhncfg", "rhncfg-actions", "rhncfg-client",
+            "rhn-virtualization-host", "osad", "mgr-cfg", "mgr-cfg-actions", "mgr-cfg-client",
+            "mgr-virtualization-host", "mgr-osad");
 
     private static final String OS = "os";
     private static final String OS_ARCH = "osarch";
